# cloudsmith-cli

./: .bumpversion.cfg  .codacy.yml  .codeclimate.yml  .editorconfig  .env.example  .envrc  .flake8  .gitignore  .isort.cfg  .overcommit.yml  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .travis.yml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  VERSION  demo.cast  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.py2.txt  requirements.py3.txt  requirements.txt  requirements_dev.py2.txt  requirements_dev.py3.txt  requirements_dev.txt  requirements_test.py2.txt  requirements_test.py3.txt  (+5 more)
.circleci/: config.yml
.git-hooks/post_checkout/: pip_install.rb
.git-hooks/post_merge/: pip_install.rb
.git-hooks/pre_commit/: pip_check.rb
.git-hooks/shared/: pip_install.rb
.github/: PULL_REQUEST_TEMPLATE.md
.github/.platforms/: README.md  generate_platforms.py  linux-aarch64-cp310.json  linux-aarch64-musl-cp310.json  linux-aarch64-musl-py310.json  linux-aarch64-musl-py311.json  linux-aarch64-musl-py312.json  linux-aarch64-musl-py313.json  linux-aarch64-musl-py314.json  linux-aarch64-musl.json  linux-aarch64-py310.json  linux-aarch64-py311.json  linux-aarch64-py312.json  linux-aarch64-py313.json  linux-aarch64-py314.json  linux-aarch64.json  linux-x86_64-cp310.json  linux-x86_64-cp311.json  linux-x86_64-cp312.json  linux-x86_64-cp313.json  linux-x86_64-cp314.json  linux-x86_64-musl-cp310.json  linux-x86_64-musl-py310.json  linux-x86_64-musl-py311.json  linux-x86_64-musl-py312.json  linux-x86_64-musl-py313.json  linux-x86_64-musl-py314.json  linux-x86_64-musl.json  linux-x86_64-py310.json  linux-x86_64-py311.json  linux-x86_64-py312.json  linux-x86_64-py313.json  linux-x86_64-py314.json  linux-x86_64.json  macos-arm64-cp310.json  macos-arm64-py310.json  macos-arm64-py311.json  macos-arm64-py312.json  macos-arm64-py313.json  macos-arm64-py314.json  (+8 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/actions/setup-cloudsmith-binary/: action.yml
.github/scripts/: binaries-matrix.json  check_wheel.py
.github/workflows/: auto-push-tag.yml  binaries.yml  lint.yml  pre-release.yml  release.yml  test.yml  zizmor.yml
.semaphore/: semaphore.yml
.serena/: project.yml
cloudsmith_cli/: __init__.py  __main__.py
cloudsmith_cli/cli/: __init__.py  command.py  config.py  decorators.py  exceptions.py  metadata_common.py  saml.py  table.py  types.py  utils.py  validators.py  warnings.py  webserver.py
cloudsmith_cli/cli/commands/: __init__.py  auth.py  check.py  copy.py  delete.py  dependencies.py  docs.py  download.py  entitlements.py  exec_.py  help.py  help_.py  list_.py  login.py  logout.py  main.py  mcp.py  metadata.py  metrics.py  move.py  overages.py  print_token.py  push.py  quarantine.py  rates.py  repos.py  repositories.py  resync.py  status.py  tags.py  token.py  tokens.py  upstream.py  vulnerabilities.py  whoami.py
cloudsmith_cli/cli/tests/: conftest.py  test_api_host_validation.py  test_metadata_common.py  test_oidc_detector_config.py  test_push.py  test_saml.py  test_utils.py  test_warnings.py  test_webserver.py  utils.py
cloudsmith_cli/core/: __init__.py  cache_utils.py  config.py  download.py  keyring.py  pagination.py  ratelimits.py  rest.py  utils.py  version.py
cloudsmith_cli/core/api/: __init__.py  distros.py  entitlements.py  exceptions.py  files.py  init.py  metadata.py  metrics.py  orgs.py  overages.py  packages.py  quota.py  rates.py  repos.py  status.py  upstreams.py  user.py  version.py  vulnerabilities.py
cloudsmith_cli/core/credentials/: __init__.py  chain.py  models.py  provider.py  providers.py  session.py
cloudsmith_cli/core/mcp/: data.py  server.py
cloudsmith_cli/core/tests/: test_azure_devops_detector.py  test_bitbucket_pipelines_detector.py  test_cache_utils.py  test_circleci_detector.py  test_cli_flag_provider.py  test_credential_chain_priority.py  test_credential_context.py  test_credential_provider_chain.py  test_credentials.py  test_credentials_file_provider.py  test_detector_controls.py  test_download.py  test_env_var_provider.py  test_gcp_detector.py  test_generic_detector.py  test_github_actions_detector.py  test_gitlab_ci_detector.py  test_init.py  test_keyring.py  test_keyring_provider.py  test_metadata.py  test_rest.py  test_version.py
cloudsmith_cli/credential_helpers/: __init__.py  backends.py  common.py  custom_domains.py  launchers.py
cloudsmith_cli/credential_helpers/cargo/: __init__.py  wrapper.py
cloudsmith_cli/credential_helpers/conda/: __init__.py  plugin.py
cloudsmith_cli/credential_helpers/docker/: __init__.py  credentials.py  installer.py  runtime.py  wrapper.py
cloudsmith_cli/credential_helpers/maven/: __init__.py  installer.py
cloudsmith_cli/credential_helpers/npm/: __init__.py  wrapper.py
cloudsmith_cli/credential_helpers/nuget/: __init__.py  wrapper.py
cloudsmith_cli/credential_helpers/pip/: __init__.py
cloudsmith_cli/credential_helpers/shellplugin/: __init__.py  config.py  maven.py  plugin.py  runner.py  shellinit.py  shims.py
cloudsmith_cli/credential_helpers/terraform/: __init__.py  wrapper.py
cloudsmith_cli/data/: config.ini  credentials.ini
cloudsmith_cli/templates/: __init__.py  auth_error.html  auth_success.html  maven_distribution_management.xml.tmpl  maven_settings.xml.tmpl
config/: config.ini  credentials.ini
packaging/: constraints.txt  smoketest.sh
packaging/homebrew/: cloudsmith-cli.rb.tmpl
packaging/pyinstaller/: cloudsmith.spec  entry.py
requirements/: common.in  common.txt  development.in  development.py2.txt  development.py3.txt  development.txt  lint.in  lint.py2.in  lint.py3.in  lint.txt  pip-compile.sh  production.py2.txt  production.py3.txt  test.in  test.txt
requirements/py2/: common.in  development.txt  test.in  test.txt
requirements/py3/: common.in  common.txt  development.in  development.txt  pip-compile.sh  test.in  test.txt
scripts/: deploy.sh
(+63 files in other folders)
