[wheel]
universal = true


[metadata]
description-file = README.md


[coverage:run]
branch = true
source = cloudsmith_cli
omit =


[coverage:html]
directory = reports/coverage


[coverage:report]
exclude_lines =
  pragma: no cover

    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
omit =
    cloudsmith_cli/*/__init__.py
    cloudsmith_cli/*/__main__.py
    cloudsmith_cli/*/tests/*
show_missing = true


[nosetests]
with-xunit = true
xunit-file = reports/nosetests.xml
with-coverage = true
cover-erase = true
cover-branches = true
cover-html = true
cover-html-dir = reports/coverage
cover-xml = true
cover-xml-file = reports/coverage.xml
cover-inclusive = true
cover-package = cloudsmith_cli

[tool:pytest]
python_paths = .
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
